--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/LaunchScreen.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/LaunchScreen.storyboard
@@ -18,37 +18,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to StreamNScore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKz-XI-ShV">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to StreamNScore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKz-XI-ShV">
                                 <rect key="frame" x="13" y="278" width="388" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Title Image" translatesAutoresizingMaskIntoConstraints="NO" id="oKa-m2-9sK">
-                                <rect key="frame" x="60" y="356" width="294" height="184"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By: Walter Teljega" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHT-iP-FlU">
                                 <rect key="frame" x="113" y="575" width="188" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="29" id="a9u-w4-IRf"/>
+                                    <constraint firstAttribute="height" constant="29" id="1a1-J9-U76"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Title Image" translatesAutoresizingMaskIntoConstraints="NO" id="oKa-m2-9sK">
+                                <rect key="frame" x="123" y="389" width="168" height="119"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
                         <constraints>
-                            <constraint firstItem="uHT-iP-FlU" firstAttribute="centerX" secondItem="oKa-m2-9sK" secondAttribute="centerX" id="0x0-ci-Ks9"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uHT-iP-FlU" secondAttribute="bottom" constant="258" id="Dqj-iq-hQh"/>
-                            <constraint firstItem="oKa-m2-9sK" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ImF-Bb-G2x"/>
-                            <constraint firstItem="uHT-iP-FlU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="113" id="d6L-gH-YsA"/>
-                            <constraint firstItem="yKz-XI-ShV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="13" id="eyQ-eb-rAk"/>
-                            <constraint firstItem="yKz-XI-ShV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="guf-Ez-6Hs"/>
-                            <constraint firstItem="uHT-iP-FlU" firstAttribute="top" secondItem="oKa-m2-9sK" secondAttribute="bottom" constant="35" id="kQ1-KD-id6"/>
-                            <constraint firstItem="yKz-XI-ShV" firstAttribute="centerX" secondItem="oKa-m2-9sK" secondAttribute="centerX" id="lDs-iT-pnO"/>
-                            <constraint firstItem="yKz-XI-ShV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="234" id="rNs-Hi-PL4"/>
-                            <constraint firstItem="oKa-m2-9sK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="xWw-wh-FnD"/>
+                            <constraint firstItem="yKz-XI-ShV" firstAttribute="centerX" secondItem="oKa-m2-9sK" secondAttribute="centerX" id="02i-L0-9Fb"/>
+                            <constraint firstItem="oKa-m2-9sK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="123" id="8B7-jt-QXf"/>
+                            <constraint firstItem="oKa-m2-9sK" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="BlZ-Sr-Bhd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uHT-iP-FlU" secondAttribute="bottom" constant="258" id="COp-WW-CfP"/>
+                            <constraint firstItem="yKz-XI-ShV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="P2Y-nL-SsC"/>
+                            <constraint firstItem="uHT-iP-FlU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="113" id="Q5E-mQ-o2p"/>
+                            <constraint firstItem="yKz-XI-ShV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="13" id="UUz-iV-30g"/>
+                            <constraint firstItem="oKa-m2-9sK" firstAttribute="top" secondItem="yKz-XI-ShV" secondAttribute="bottom" constant="71" id="Ygj-64-g1u"/>
+                            <constraint firstItem="oKa-m2-9sK" firstAttribute="centerX" secondItem="uHT-iP-FlU" secondAttribute="centerX" id="dJA-Qg-dzg"/>
+                            <constraint firstItem="yKz-XI-ShV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="234" id="iu2-Vq-HD0"/>
+                            <constraint firstItem="uHT-iP-FlU" firstAttribute="top" secondItem="oKa-m2-9sK" secondAttribute="bottom" constant="67" id="nq3-w6-QUx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
